# Image-Viewer

./: .gitignore  Build.bat  Build.sh  CMakeLists.txt  CMakeSettings.json  LICENSE  SetupExternal.bat  SetupExternal.sh
Include/GUI/: Camera.h  FileMenu.h  LuminanceOptions.h  MainMenu.h  MainMenuBar.h  OptionsPanel.h  SizeConsts.h  ViewerUI.h  Viewport.h  ZoomViewport.h
Include/GUI/Options/: Luminance.h  Saturation.h
Include/ImageProcessing/: Image.h  ImageTypes.h  LuminanceFilter.h  WorkerThread.h
Include/ImageProcessing/Filters/: Luminance.h  Saturation.h
Include/Rendering/: API.h  OpenGLBackend.h  OpenGLFramebuffer.h  OpenGLProgram.h  OpenGLRenderer.h  OpenGLShader.h  OpenGLTexture.h
Include/Rendering/OpenGL/: Backend.h  Framebuffer.h  Program.h  Renderer.h  Shader.h  Texture.h
Include/Rendering/Vulkan/: Backend.h  Renderer.h
Include/Rendering/Vulkan/Impl/: VulkanCommandPool.h  VulkanDescriptorPool.h  VulkanFramebuffer.h  VulkanGLFW.h  VulkanImGui.h  VulkanInstance.h  VulkanLogicalDevice.h  VulkanMeshData.h  VulkanPhysicalDevice.h  VulkanPipeline.h  VulkanPushConstant.h  VulkanQueueFamilies.h  VulkanShader.h  VulkanSurface.h  VulkanSwapChain.h  VulkanUBO.h  VulkanUtility.h  VulkanVma.h
Include/Utility/: HeapAllocator.h  Literals.h  Log.h  MemoryBlock.h  StackAllocator.h  TimeInterval.h
Include/Utility/Tests/: HeapAllocatorTest.h  StackAllocatorTest.h
Resources/Shaders/: fsBGround.glsl  fsTexture.glsl  vsBGround.glsl  vsTexture.glsl
Resources/Shaders/OpenGL/: fsCrossBGround.glsl  fsZoomBGround.glsl
Resources/Shaders/Vulkan/: fsTest.glsl  vsTest.glsl
Source/: CMakeLists.txt  Main.cpp
Source/GUI/: Camera.cpp  FileMenu.cpp  LuminanceOptions.cpp  MainMenu.cpp  MainMenuBar.cpp  OptionsPanel.cpp  ViewerUI.cpp  Viewport.cpp  ZoomViewport.cpp
Source/GUI/Options/: Luminance.cpp  Saturation.cpp
Source/ImageProcessing/: Image.cpp  LuminanceFilter.cpp  WorkerThread.cpp
Source/ImageProcessing/Filters/: Luminance.cpp  Saturation.cpp
Source/Rendering/: API.cpp  OpenGLBackend.cpp  OpenGLFramebuffer.cpp  OpenGLProgram.cpp  OpenGLRenderer.cpp  OpenGLShader.cpp  OpenGLTexture.cpp
Source/Rendering/OpenGL/: Backend.cpp  Framebuffer.cpp  Program.cpp  Renderer.cpp  Shader.cpp  Texture.cpp
Source/Rendering/Vulkan/: Backend.cpp  Renderer.cpp
Source/Rendering/Vulkan/Impl/: VulkanCommandPool.cpp  VulkanDescriptorPool.cpp  VulkanFramebuffer.cpp  VulkanGLFW.cpp  VulkanImGui.cpp  VulkanInstance.cpp  VulkanLogicalDevice.cpp  VulkanMeshData.cpp  VulkanPhysicalDevice.cpp  VulkanPipeline.cpp  VulkanPushConstant.cpp  VulkanQueueFamilies.cpp  VulkanShader.cpp  VulkanSurface.cpp  VulkanSwapChain.cpp  VulkanUBO.cpp  VulkanUtility.cpp  VulkanVma.cpp
Source/Utility/: HeapAllocator.cpp  Log.cpp  MemoryBlock.cpp  StackAllocator.cpp  TimeInterval.cpp
Source/Utility/Tests/: HeapAllocatorTest.cpp  StackAllocatorTest.cpp
